initiate common maven dependencies and plugins